フィルタ登録を追加しました Logger追加

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>User Dashboard</title>
 </head>
 <body>
 <p><strong>Dashboard</strong></p>
