videoカタログの関連追加

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -7,6 +7,7 @@
 <body>
 <p><strong>Dashboard</strong></p>
 <p>ユーザーID: [[${session.loginId}]]</p>
+<p><a th:href="@{/cataloque}">カタログへ</a></p>
 <p><a th:href="@{/logout}">ログアウト</a></p>
 </body>
 </html>
