--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8">
 	<title>ログイン</title>
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+	<link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
+
 <body>
-	<h1>ログイン</h1>
-	
-	<p th:if="${errorMsg}">[[${errorMsg}]]</p>
-	
-	<form action="" method="post">
-		<p>ログインID:
-			<input type="text" name="loginId">
-		</p>
-		
-		<p>パスワード:
-			<input type="password" name="pass">
-		</p>
-		<p><input type="submit"></p>
-	</form>
+	<div class="container">
+		<h1>ログイン</h1>
+
+		<p th:if="${errorMsg}">[[${errorMsg}]]</p>
+
+		<form action="" method="post">
+			<p>ログインID:
+				<input type="text" name="loginId">
+			</p>
+
+			<p>パスワード:
+				<input type="password" name="pass">
+			</p>
+			<p><input type="submit"></p>
+		</form>
+	</div>
 </body>
+
 </html>
