--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h1><strong>Dashboard</strong></h1>
-		<p>ユーザーID: [[${session.loginId}]]</p>
+		<p>ユーザーID: [[${session.user.username}]]</p>
 		<p th:if="${session.user != null}">タイプ: [[${session.user.role.name()}]]</p>
 		
 		<div th:if="${session.user != null and session.user.role.name() == 'Admin'}">
