--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<h1>カタログ</h1>
 
-		<form th:action="@{/cataloque/search}">
+		<form th:action="@{/catalog/search}">
 			<p>
 				<input type="text" name="title" placeholder="タイトル">
 				<input type="submit" name="titleButton" value="タイトルで絞り込み">
@@ -53,7 +53,7 @@
 						<a class="page-link" href="">&laquo;</a>
 					</li>
 					<li th:case="*" class="page-item">
-						<a class="page-link" th:href="@{/cataloque(page=${page - 1})}">&laquo;</a>
+						<a class="page-link" th:href="@{/catalog(page=${page - 1})}">&laquo;</a>
 					</li>
 				</th:block>
 
@@ -64,7 +64,7 @@
 							<a class="page-link" href="">[[${index}]]</a>
 						</li>
 						<li th:case="*" class="page-item">
-							<a class="page-link" th:href="@{/cataloque(page=${index})}">[[${index}]]</a>
+							<a class="page-link" th:href="@{/catalog(page=${index})}">[[${index}]]</a>
 						</li>
 					</th:block>
 				</th:block>
@@ -72,7 +72,7 @@
 				<!--次のページへ-->
 				<th:block th:switch="${page}">
 					<li th:case="${totalPages}" class="page-item disabled">
-						<a class="page-link" th:href="@{/cataloque(page=${page + 1})}">&raquo;</a>
+						<a class="page-link" th:href="@{/catalog(page=${page + 1})}">&raquo;</a>
 					</li>
 				</th:block>
 		</div>
