--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,9 +15,13 @@
 		<p th:if="${session.user != null}">タイプ: [[${session.user.role.name()}]]</p>
 		
 		<div th:if="${session.user != null and session.user.role.name() == 'Admin'}">
-			<h1>Hello</h1>
+			<h1>Hello <!--add/remove videos/users logic-->
+				
+				
+				
+			</h1>
 		</div>
-		<p><a th:href="@{/cataloque}">カタログへ</a></p>
+		<p><a th:href="@{/catalog}">カタログへ</a></p>
 		<p><a th:href="@{/logout}">ログアウト</a></p>
 	</div>
 </body>
