--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,3 +4,13 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+div h1 p a {
+  font-size: 18px; 
+}
