--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<meta charset="UTF-8">
 	<title>カタログ</title>
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 	<link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
+
 <body>
 	<div class="container">
 		<h1>カタログ</h1>
@@ -41,6 +43,11 @@
 				<td>[[${video.release}]]</td>
 				<td>[[${video.duration}]]</td>
 				<td>[[${video.rating}]]</td>
+				<td th:if="${session.user != null and session.user.role.name() == 'Admin'}">
+					<a th:href="@{/catalog/remove/{id}(id=${video.id})}" th:data-name="${video.title}"
+						class="btn btn-danger delete">削除
+					</a>
+				</td>
 			</tr>
 		</table>
 
@@ -76,8 +83,23 @@
 					</li>
 				</th:block>
 		</div>
+		<!-- ページネーションを表示:end -->
+
 		<p><a th:href="@{/user/dashboard}">戻る</a></p>
+
 	</div>
 </body>
+<script>
+	document.addEventListener("DOMContentLoaded", function () {
+		document.querySelectorAll(".delete").forEach(btn => {
+			btn.addEventListener("click", function (e) {
+				const name = this.dataset.name;
+				if (!confirm(`「${title}」を削除します。よろしいですか？`)) {
+					e.preventDefault();
+				}
+			});
+		});
+	});
+</script>
 
 </html>
