エンドポイント変更

--- a/src/main/resources/templates/add_video.html
+++ b/src/main/resources/templates/add_video.html
@@ -40,7 +40,7 @@
 			<input type="submit">
 		</form>
 
-		<p><a th:href="@{/catalog}">戻る</a></p>
+		<p><a th:href="@{/dashboard}">戻る</a></p>
 	</div>
 </body>
 
