--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -85,7 +85,7 @@
 		</div>
 		<!-- ページネーションを表示:end -->
 
-		<p><a th:href="@{/user/dashboard}">戻る</a></p>
+		<p><a th:href="@{/dashboard}">戻る</a></p>
 
 	</div>
 </body>
