--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,12 +13,23 @@
 		<h1><strong>Dashboard</strong></h1>
 		<p>ユーザーID: [[${session.user.username}]]</p>
 		<p th:if="${session.user != null}">タイプ: [[${session.user.role.name()}]]</p>
-		
+
 		<div th:if="${session.user != null and session.user.role.name() == 'Admin'}">
-			<h1><!--add/remove videos/users logic-->
+			<h1>
 				<p><a th:href="@{/catalog/add}">動画の追加</a></p>
 			</h1>
 		</div>
+		<h3>Activity</h3>
+		<p></p><table>
+			<tr>
+				<th>タイプ</th>
+				<th>日付</th>
+			</tr>
+			<tr>
+				<td>Type</td>
+				<td>Date</td>
+			</tr>
+		</table></p>
 		<p><a th:href="@{/catalog}">カタログへ</a></p>
 		<p><a th:href="@{/logout}">ログアウト</a></p>
 	</div>
