--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -52,7 +52,7 @@
 		</table>
 
 		<!--ページネーションスタート-->
-		<div th:if="${totalPages >= 2}" class="container">
+		<div th:if="${totalPages >= 2}" class="container2">
 			<ul class="pagination">
 				<!--前のページへ-->
 				<th:block th:switch="${page}">
