--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,3 +14,60 @@ input[type=number]::-webkit-outer-spin-button {
 div h1 p a {
   font-size: 18px; 
 }
+
+body {
+	  background-color: black;
+	  background-image: url('/images/bg1.jpg');
+	  background-repeat: no-repeat;
+	  background-size: cover; 
+	  background-position: center;
+	  min-height: 100vh;
+	  margin: 0;
+	  padding: 0;
+	  display: flex;
+	  flex-direction: column;
+	}
+
+header .logo {
+	text-align: center;
+	padding: 20px;
+}	
+
+main {
+	flex: 1;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  padding: 20px;
+}	
+
+.container {
+	background-color: rgba(255, 255, 255, 0.9);
+	padding: 2rem;
+	border-radius: 10px;
+	margin-top: 2rem;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.login {
+	background-color: rgba(255, 255, 255, 0.9);
+	padding: 2rem;
+	border-radius: 10px;
+	margin-top: 2rem;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	max-width: 25rem;
+	
+}
+
+.back-link {
+	margin-top: 20px;
+}
+
+footer {
+    background: #1a1a2e;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+	margin-top: auto;
+}
