--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,25 +7,47 @@
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 	<link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
+<style>
+
+</style>
 
 <body>
-	<div class="container">
-		<h1>新ユーザー登録</h1>
-		<form action="" method="post" th:object="${user}">
-			<span th:errors="*{username}" class="error"></span>
-			<p>ユーザーネーム: <input type="text" th:field="*{username}"></p>
+	<header>
+		<div class="logo">
+			<img src="../images/nedfligz.png" alt="nedfligz" width="650" height="200">
+		</div>
+	</header>
 
-			<span th:errors="*{email}" class="error"></span>
-			<p>メールアドレス: <input type="text" th:field="*{email}"></p>
+	<main>
+		<div class="login">
+			<p>
+			<h1>新ユーザー登録</h1>
+			</p>
+			<form action="" method="post" th:object="${user}">
+				<span th:errors="*{username}" class="error"></span>
+				<label for="username">ユーザーネーム: </label>
+				<p><input type="text" th:field="*{username}"></p>
 
-			<span th:errors="*{password}" class="error"></span>
-			<p>パスワード: <input type="text" th:field="*{password}"></p>
 
-			<input type="submit"> 
-		</form>
+				<span th:errors="*{email}" class="error"></span>
+				<label for="email">メールアドレス: </label>
+				<p><input type="email" th:field="*{email}"></p>
 
-			<p><a th:href="@{/login}">戻る</a></p>
-	</div>
+
+				<span th:errors="*{password}" class="error"></span>
+				<label for="password">パスワード: </label>
+				<p><input type="password" th:field="*{password}"></p>
+
+				<input type="submit" value="登録" class="btn btn-success">
+
+				<div class="back-link">
+					<a th:href="@{/login}">← ログインページに戻る</a>
+				</div>
+		</div>
+	</main>
+	<footer>
+	        <p>&copy; 2025 nEdFLiGz. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
