--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -49,6 +49,10 @@ main {
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.error {
+	color: #f00;
+	margin-bottom: 0;
+}
 .login {
 	background-color: rgba(255, 255, 255, 0.9);
 	padding: 2rem;
