--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -61,6 +61,40 @@ main {
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 	max-width: 25rem;
 	
+}
+
+.tile-container {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	padding: 10px;
+	gap: 5px;
+}
+
+.tile {
+	width: 200px;
+	height: 200px;
+	padding: 0;
+	font-size: 15px;
+	text-align: center;
+}
+
+.tile-background {
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
+}
+
+.tile-content {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(0, 0, 0, 0.7);
+	color: white;
+	padding: 10px;
 }
 
 .back-link {
