--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,7 +13,7 @@
 		<h1><strong>Dashboard</strong></h1>
 		<p>ユーザーID: [[${session.user.username}]]</p>
 		<p th:if="${session.user != null}">タイプ: [[${session.user.role.name()}]]</p>
-
+		<h1><a th:href="@{/catalog}">カタログへ</a></h1>
 		<div th:if="${session.user != null and session.user.role.name() == 'Admin'}">
 			<h1>
 				<p><a th:href="@{/catalog/add}">動画の追加</a></p>
@@ -27,7 +27,6 @@
 				<td th:text="${activity.details}"></td>
 			</tr>
 		</table>
-		<p><a th:href="@{/catalog}">カタログへ</a></p>
 		<p><a th:href="@{/logout}">ログアウト</a></p>
 	</div>
 </body>
