間違い直し

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -29,6 +29,9 @@
 		</table>
 		<p><a th:href="@{/logout}">ログアウト</a></p>
 	</div>
+	<footer>
+		 <p>&copy; 2025 nEdFLiGz. All rights reserved.</p>
+	</footer>
 </body>
 
 </html>
