--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -36,43 +36,46 @@
 			</div>
 		</div>
 
-			<!--ページネーションスタート-->
-			<div th:if="${totalPages >= 2}" class="container2">
-				<ul class="pagination">
-					<!--前のページへ-->
-					<th:block th:switch="${page}">
-						<li th:case="1" class="page-item disabled">
-							<a class="page-link" href="">&laquo;</a>
+		<!--ページネーションスタート-->
+		<div th:if="${totalPages >= 2}" class="container2">
+			<ul class="pagination">
+				<!--前のページへ-->
+				<th:block th:switch="${page}">
+					<li th:case="1" class="page-item disabled">
+						<a class="page-link" href="">&laquo;</a>
+					</li>
+					<li th:case="*" class="page-item">
+						<a class="page-link" th:href="@{/catalog(page=${page - 1})}">&laquo;</a>
+					</li>
+				</th:block>
+
+				<!--ページ番号-->
+				<th:block th:each="index : ${#numbers.sequence(1, totalPages)}">
+					<th:block th:switch="${index}">
+						<li th:case="${page}" class="page-item active">
+							<a class="page-link" href="">[[${index}]]</a>
 						</li>
 						<li th:case="*" class="page-item">
-							<a class="page-link" th:href="@{/catalog(page=${page - 1})}">&laquo;</a>
+							<a class="page-link" th:href="@{/catalog(page=${index})}">[[${index}]]</a>
 						</li>
 					</th:block>
+				</th:block>
 
-					<!--ページ番号-->
-					<th:block th:each="index : ${#numbers.sequence(1, totalPages)}">
-						<th:block th:switch="${index}">
-							<li th:case="${page}" class="page-item active">
-								<a class="page-link" href="">[[${index}]]</a>
-							</li>
-							<li th:case="*" class="page-item">
-								<a class="page-link" th:href="@{/catalog(page=${index})}">[[${index}]]</a>
-							</li>
-						</th:block>
-					</th:block>
-
-					<!--次のページへ-->
-					<th:block th:switch="${page}">
-						<li th:case="${totalPages}" class="page-item disabled">
-							<a class="page-link" th:href="@{/catalog(page=${page + 1})}">&raquo;</a>
-						</li>
-					</th:block>
-			</div>
-			<!-- ページネーションを表示:end -->
-
-			<p><a th:href="@{/dashboard}">戻る</a></p>
-
+				<!--次のページへ-->
+				<th:block th:switch="${page}">
+					<li th:case="${totalPages}" class="page-item disabled">
+						<a class="page-link" th:href="@{/catalog(page=${page + 1})}">&raquo;</a>
+					</li>
+				</th:block>
 		</div>
+		<!-- ページネーションを表示:end -->
+
+		<p><a th:href="@{/dashboard}">戻る</a></p>
+
+	</div>
+	<footer>
+		 <p>&copy; 2025 nEdFLiGz. All rights reserved.</p>
+	</footer>
 </body>
 <script>
 	document.addEventListener("DOMContentLoaded", function () {
