--- a/src/main/resources/templates/add_video.html
+++ b/src/main/resources/templates/add_video.html
@@ -11,7 +11,7 @@
 <body>
 	<header></header>
 	<main>
-		<div class="container">
+		<div class="add-form">
 			<h1>動画の追加</h1>
 
 			<form action="" method="post" th:object="${video}">
