--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -119,6 +119,38 @@ main {
 	padding: 10px;
 }
 
+.container-details {
+	display: grid;
+	grid-template-areas: 
+	"header header"
+	"sidebar content"
+	"footer footer";
+	grid-template-columns: 1fr 2fr;
+	background-color: rgba(255, 255, 255, 0.9);
+	padding: 2rem;
+	border-radius: 10px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	max-width: 800px;
+	margin: 2rem auto;
+}
+
+.container-details > div.video-title {
+	grid-area: header;
+	text-align: center;
+}
+
+.container-details > div.content-summary {
+	grid-area: footer;
+	font-style: italic;
+}
+
+.container-details > div.content-info {
+	grid-area: sidebar;
+}
+
+.container-details > div.content {
+	grid-area: content;
+}
 .pagination-container {
 	margin: 0 auto;
 }
