--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,10 +6,6 @@ input[type=number]::-webkit-outer-spin-button {
 	margin: 0;
 }
 
-div h1 p a {
-	font-size: 18px;
-}
-
 body {
 	background-color: black;
 	background-image: url('/images/bg1.jpg');
@@ -88,19 +84,19 @@ main {
 	grid-area: user-info;
 	background: rgba(248, 249, 250, 0.8);
 	color: rgb(0, 0, 64);
-	padding: 1.5rem;
+	padding: 0.7rem;
 	border-radius: 10px;
 	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-user-info h2 {
-	margin: 0 0 1rem 0;
-	font-size: 1.5rem;
+.user-info h2 {
+	margin: 0 0 0.5rem 0;
+	font-size: 2rem;
 }
 
-user-info p {
-	margin: 0.5rem 0;
-	font-size: 0.9rem;
+.user-info p {
+	margin: 0 0 0.3rem 0;
+	font-size: 1rem;
 	opacity: 0.9;
 }
 
@@ -272,6 +268,10 @@ user-info p {
 	grid-area: sidebar;
 }
 
+.container-details>div.content-info img {
+	margin-top: 20px;
+}
+
 .container-details>div.content {
 	grid-area: content;
 }
@@ -323,6 +323,11 @@ footer {
 		height: auto;
 	}
 
+	.content video {
+		width: 100%;
+		max-width: 300;
+		height: auto;
+	}
 	.login {
 		margin-top: -250px;
 	}
