--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,15 +15,18 @@
 				<h2><strong>Dashboard</strong></h2>
 				<p>ユーザーID: [[${session.user.username}]]</p>
 				<p th:if="${session.user != null}">タイプ: [[${session.user.role.name()}]]</p>
+				<p th:if="${session.user != null and session.user.role.name() == 'Admin'}">
+					<a th:href="@{/catalog/add}">動画の追加</a>
+				</p>
 				<p><a th:href="@{/logout}">ログアウト</a></p>
 			</div>
 			<div class="activity-log">
 				<h4>Recent Activity</h4>
-					<div class="activity" th:each="activity : ${activities}">
-						<div th:text="${#temporals.format(activity.createdAt, 'MMM dd, HH:mm')}"></div>
-						<div th:text="${activity.type}"></div>
-						<div th:text="${activity.details}"></div>
-					</div>
+				<div class="activity" th:each="activity : ${activities}">
+					<div th:text="${#temporals.format(activity.createdAt, 'MMM dd, HH:mm')}"></div>
+					<div th:text="${activity.type}"></div>
+					<div th:text="${activity.details}"></div>
+				</div>
 			</div>
 			<div class="catalog-link">
 				<h1><a th:href="@{/catalog}">カタログへ</a></h1>
