--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
 					<input type="password" name="pass">
 				</p>
 				<p>
-					<input type="submit">
+					<input type="submit" value="login">
 				</p>
 			</form>
 			<p><a th:href="@{/registration}">新ユーザー登録</a></p>
